# rplidar-zenoh-driver

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  crates.js  help.html  out.mcap  search-index.js  settings.html  src-files.js
debian/: service
driver/: all.html  fn.lidar_loop.html  fn.main.html  fn.start_lidar_driver.html  index.html  sidebar-items.js  struct.Args.html
foxglove_scenes/: rplidar.json
foxglove_server/: all.html  constant.GENERIC_JSON_SCHEMA.html  constant.JSON_ENCODING.html  constant.PROTOBUF_ENCODING.html  fn.create_publisher_for_protobuf.html  fn.main.html  fn.start_json_subscriber.html  fn.start_proto_subscriber.html  fn.zenoh_listener_loop.html  index.html  sidebar-items.js  struct.Args.html
mcap_logger/: all.html  constant.PROTOBUF_ENCODING.html  fn.main.html  fn.register_mcap_topic_for_protobuf.html  index.html  sidebar-items.js  struct.Args.html
rplidar_zenoh_driver/: all.html  enum.ErrorWrapper.html  fn.rp_lidar_projected_point_descriptor.html  fn.rp_lidar_projected_points_to_foxglove_point_cloud.html  fn.setup_tracing.html  fn.system_time_to_proto_time.html  index.html  sidebar-items.js  struct.RpLidarProjectedPoint.html
rplidar_zenoh_driver/foxglove/: index.html  sidebar-items.js  struct.ArrowPrimitive.html  struct.CameraCalibration.html  struct.CircleAnnotation.html  struct.Color.html  struct.CompressedImage.html  struct.CubePrimitive.html  struct.CylinderPrimitive.html  struct.FrameTransform.html  struct.FrameTransforms.html  struct.GeoJson.html  struct.Grid.html  struct.ImageAnnotations.html  struct.KeyValuePair.html  struct.LaserScan.html  struct.LinePrimitive.html  struct.LocationFix.html  struct.Log.html  struct.ModelPrimitive.html  struct.PackedElementField.html  struct.Point2.html  struct.Point3.html  struct.PointCloud.html  struct.PointsAnnotation.html  struct.Pose.html  struct.PoseInFrame.html  struct.PosesInFrame.html  struct.Quaternion.html  struct.RawImage.html  struct.SceneEntity.html  struct.SceneEntityDeletion.html  struct.SceneUpdate.html  struct.SpherePrimitive.html  struct.TextAnnotation.html  struct.TextPrimitive.html  struct.TriangleListPrimitive.html  struct.Vector2.html  struct.Vector3.html
scripts/: add_udev_rules.sh
search.desc/driver/: driver-desc-0-.js
search.desc/foxglove_server/: foxglove_server-desc-0-.js
search.desc/mcap_logger/: mcap_logger-desc-0-.js
search.desc/rplidar_zenoh_driver/: rplidar_zenoh_driver-desc-0-.js
src/: lib.rs  main.rs
src/driver/: driver.rs.html
src/foxglove_server/: foxglove_server.rs.html
(+42 files in other folders)
