[package]
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2021"
license = "MIT OR APACHE"
name = "rplidar-zenoh-driver"
publish = false
version = "0.1.0"

[dependencies]
rplidar_driver = {git = "https://github.com/dmweis/rplidar_driver", branch = "main"}
tokio = {version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "signal"]}
zenoh = "0.7.2-rc"

# protobuf
once_cell = "1.17.0"
prost = "0.11.9"
prost-reflect = {version = "0.11.4", features = ["derive"]}
prost-types = "0.11.9"

# utilities
anyhow = "1.0"
clap = {version = "4.2", features = ["derive"]}

# mcap
mcap = "0.6.0"
memmap2 = "0.7.1"

# logging
tracing = {version = "0.1", features = ["log"]}
tracing-logfmt = "0.3"
tracing-subscriber = {version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
]}

# foxglove bridge
base64 = "0.21.2"
foxglove-ws = {git = "https://github.com/dmweis/foxglove-ws.git", branch = "main"}
# foxglove-ws = {path = "../foxglove-ws"}

[build-dependencies]
prost-build = "0.11.9"
prost-reflect-build = "0.11.0"
